Fix imgs growing on safari bug

--- a/src/routes/reset.css
+++ b/src/routes/reset.css
@@ -42,6 +42,7 @@ menu {
 img {
   max-inline-size: 100%;
   max-block-size: 100%;
+  height: 100%;
 }
 
 /* removes spacing between cells in tables */
@@ -106,12 +107,6 @@ meter {
 /* Revert Modal native behavior */
 :where(dialog:modal) {
   all: revert;
-}
-
-img {
-  display: block;
-  width: 100%;
-  height: 100%;
 }
 
 button {
